// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastContainer matches snapshot 1`] = `
<div
  className="sc-gsnTZi jgRncN"
>
  <div
    className="sc-bczRLJ gKtpgy"
  >
    <div
      className="neutral"
    >
      <div
        className="title"
      >
        Neutral
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    className="sc-bczRLJ iOhxrI"
  >
    <div
      className="failure"
    >
      <div
        className="title"
      >
        Error
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    className="sc-bczRLJ cJAPSe"
  >
    <div
      className="success"
    >
      <div
        className="title"
      >
        Success
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
</div>
`;

exports[`ToastContainer uses inline prop 1`] = `
<div
  className="sc-gsnTZi bBRjBg"
>
  <div
    className="sc-bczRLJ gjglkd"
  >
    <div
      className="neutral"
    >
      <div
        className="title"
      >
        Neutral
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    className="sc-bczRLJ hptoRH"
  >
    <div
      className="failure"
    >
      <div
        className="title"
      >
        Error
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    className="sc-bczRLJ ikbXNd"
  >
    <div
      className="success"
    >
      <div
        className="title"
      >
        Success
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
</div>
`;
